remove pointless empty space